--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Todo",
+    "name": "Список моих задач",
     "slug": "todo",
     "version": "1.0.0",
     "orientation": "portrait",
